--- a/frontend/index.html
+++ b/frontend/index.html
@@ -53,7 +53,7 @@
               <a id="infoButton" class="button is-light">
                 О проекте
               </a>
-              <a class="button is-light">
+              <a class="button is-light" href="https://www.donationalerts.com/r/alexkad58">
                 Войти на MeowSMP
               </a>
             </div>
@@ -123,7 +123,7 @@
       <section class="section">
         <div class="columns is-mobile">
           <div class="column is-half is-offset-one-quarter">
-            <button class="button is-primary is-large is-fullwidth">Войти на MeowSMP</button>
+            <button class="button is-primary is-large is-fullwidth" href="https://www.donationalerts.com/r/alexkad58">Войти на MeowSMP</button>
           </div>
         </div>
       </section>
