--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MeowSMP</title>
+    <link rel="icon" href="src/icon.png">
     <style>
         html { 
             background: url(src/bg.png) no-repeat center center fixed; 
