--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MeowSMP</title>
-    <link rel="icon" href="https://icons8.com/icon/6525/minecraft-shovel">
+    <link rel="icon" href="src/icon.png">
     <style>
         html { 
             background: url(src/bg.png) no-repeat center center fixed; 
