--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,10 +66,7 @@
         <div class="columns">
           <div class="column is-three-fifths is-offset-one-fifth">
             <div class="columns">
-              <div class="column">
-                <iframe src="https://discord.com/widget?id=671413177279447115&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-              </div>
-              <div class="column">
+              <div class="column is-half">
                 <h1 class="title">Версия: <strong>1.16.5</strong></h1>
                 <h2 class="subtitle">
                   Установлены различные датапаки и плагины для комфортной игры на сервере! 
@@ -77,6 +74,9 @@
                 <h2 class="subtitle">
                   Присоединяйтесь к нашему сообществу в Discord и находите новых знакомых!
                 </h2>
+              </div>
+              <div class="column">
+                <iframe src="https://discord.com/widget?id=671413177279447115&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
               </div>
             </div>
           </div>
