--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,7 @@
         <div class="columns">
           <div class="column is-one-third">
             <figure class="image is-128x128 is-pulled-right">
-              <img src="https://media.tenor.com/images/1b0b517b9d0f73fa14f0f12a47dd1226/tenor.gif">
+              <img src="src/gif1.gif">
             </figure>
           </div>
           <div class="column">
@@ -112,7 +112,7 @@
           </div>
           <div class="column">
             <figure class="image is-128x128 is-pulled-left">
-              <img src="https://media.tenor.com/images/70f4f351a27b13c544bb78e6c0fec279/tenor.gif">
+              <img src="src/gif2.gif">
             </figure>
             
           </div>
