--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,7 +42,7 @@
         <div class="navbar-end">
           <div class="navbar-item">
             <div class="buttons">
-              <a id="infoButton is-unselectable" class="button is-light">
+              <a id="infoButton" class="button is-light is-unselectable">
                 О проекте
               </a>
               <button class="button is-light is-unselectable" onclick="openInNewTab('https://www.donationalerts.com/r/alexkad58');">Войти на MeowSMP</button>
@@ -67,14 +67,15 @@
             </h2>
           </div>
           <div class="column">
-            <iframe src="https://discord.com/widget?id=671413177279447115&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            <iframe src="https://discord.com/widget?id=671413177279447115&theme=dark" width="100%" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
           </div>
         </div>
       </div>
     </div>
   </section>
+
   <section id="info" class="section is-medium has-background-white">
-    <div class="columns">
+    <!-- <div class="columns">
       <div class="column is-one-third">
         <figure class="image is-128x128 is-pulled-right">
           <img src="src/gif1.gif">
@@ -86,26 +87,47 @@
           <strong>SMP</strong> - <strong>"Survival Multiplayer"</strong>. Все просто! Аббревиатура относится к жанру серверов, ориентированных на выживание в Minecraft, но не в одиночку, а с сообществом.
         </h2>
       </div>
+    </div> -->
+    <div class="columns">
+      <div class="column is-three-fifths is-offset-one-fifth">
+        <div class="columns">
+          <div class="column is-one-third">
+            <img src="src/gif1.gif" style="width: 100%; max-width: 128px; height: auto;">
+          </div>
+          <div class="column">
+            <h1 class="title">Что такое <strong>SMP</strong>?</h1>
+            <h2 class="subtitle">
+              <strong>SMP</strong> - <strong>"Survival Multiplayer"</strong>. Все просто! Аббревиатура относится к жанру серверов, ориентированных на выживание в Minecraft, но не в одиночку, а с сообществом.
+            </h2>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
   <section class="section is-medium has-background-light">
     <div class="columns">
-      <div class="column is-one-quarter"></div>
-      <div class="column is-half">
-        <h1 class="title">Как к нам попасть?</h1>
-        <h2 class="subtitle">
-          На сервер можно войти как с лицензией, так и без нее. Стоимость прохода на сервер составляет всего <strong>50</strong> рублей!
-        </h2>
-      </div>
-      <div class="column">
-        <figure class="image is-128x128 is-pulled-left">
-          <img src="src/gif2.gif">
-        </figure>
-        
+      <div class="column is-three-fifths is-offset-one-fifth">
+        <div class="columns">
+          <div class="column is-two-thirds">
+            <h1 class="title">Как к нам попасть?</h1>
+            <h2 class="subtitle">
+              На сервер можно войти как с лицензией, так и без нее. 
+              Стоимость прохода на сервер составляет всего <strong>50</strong> рублей!
+            </h2>
+          </div>
+          <div class="column">
+            <!-- <figure class="image is-128x128 is-pulled-left">
+              <img src="src/gif2.gif">
+            </figure> -->
+            <img src="src/gif2.gif" style="width: 100%; max-width: 128px; height: auto;">
+          </div>
+        </div>
       </div>
     </div>
   </section>
+  
+  
 
   <section class="section">
     <div class="columns is-mobile">
