--- a/frontend/index.html
+++ b/frontend/index.html
@@ -130,7 +130,7 @@
   
 
   <section class="section">
-    <div class="columns is-mobile">
+    <div class="columns">
       <div class="column is-half is-offset-one-quarter">
         <button class="button is-primary is-large is-fullwidth is-unselectable" onclick="openInNewTab('https://www.donationalerts.com/r/alexkad58');">Войти на MeowSMP</button>
       </div>
