--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
               <a id="infoButton" class="button is-light is-unselectable">
                 О проекте
               </a>
-              <button class="button is-light is-unselectable" onclick="openInNewTab('https://www.donationalerts.com/r/alexkad58');">Войти на MeowSMP</button>
+              <button class="button is-light is-unselectable" onclick="openInNewTab('https://discord.gg/gRzpGWAGCD');">Войти на MeowSMP</button>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
             <h1 class="title">Как к нам попасть?</h1>
             <h2 class="subtitle">
               На сервер можно войти как с лицензией, так и без нее. 
-              Стоимость прохода на сервер составляет всего <strong>50</strong> рублей!
+              На данный момент проход <strong>бесплатный</strong>, так что просто обращайся к администрации в дискорде!
             </h2>
           </div>
           <div class="column">
@@ -132,7 +132,7 @@
   <section class="section">
     <div class="columns">
       <div class="column is-half is-offset-one-quarter">
-        <button class="button is-primary is-large is-fullwidth is-unselectable" onclick="openInNewTab('https://www.donationalerts.com/r/alexkad58');">Войти на MeowSMP</button>
+        <button class="button is-primary is-large is-fullwidth is-unselectable" onclick="openInNewTab('https://discord.gg/gRzpGWAGCD');">Войти на MeowSMP</button>
       </div>
     </div>
   </section>
