--- a/frontend/index.html
+++ b/frontend/index.html
@@ -92,9 +92,9 @@
       <div class="column is-three-fifths is-offset-one-fifth">
         <div class="columns">
           <div class="column is-one-third">
-            <img src="src/gif1.gif" style="width: 100%; max-width: 128px; height: auto;">
+            <img src="src/gif1.gif" style="width: 100%; max-width: 128px; height: auto; display: block; margin-left: auto; margin-right: auto;">
           </div>
-          <div class="column">
+          <div class="column has-text-centered">
             <h1 class="title">Что такое <strong>SMP</strong>?</h1>
             <h2 class="subtitle">
               <strong>SMP</strong> - <strong>"Survival Multiplayer"</strong>. Все просто! Аббревиатура относится к жанру серверов, ориентированных на выживание в Minecraft, но не в одиночку, а с сообществом.
@@ -109,7 +109,7 @@
     <div class="columns">
       <div class="column is-three-fifths is-offset-one-fifth">
         <div class="columns">
-          <div class="column is-two-thirds">
+          <div class="column is-two-thirds has-text-centered">
             <h1 class="title">Как к нам попасть?</h1>
             <h2 class="subtitle">
               На сервер можно войти как с лицензией, так и без нее. 
@@ -117,10 +117,7 @@
             </h2>
           </div>
           <div class="column">
-            <!-- <figure class="image is-128x128 is-pulled-left">
-              <img src="src/gif2.gif">
-            </figure> -->
-            <img src="src/gif2.gif" style="width: 100%; max-width: 128px; height: auto;">
+            <img src="src/gif2.gif" style="width: 100%; max-width: 128px; height: auto; display: block; margin-left: auto; margin-right: auto;">
           </div>
         </div>
       </div>
