--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>MeowSMP</title>
-    <link rel="icon" href="src/icon.png">
+    <link rel="icon" href="src/icon.ico"/> 
+    
     <style>
         html { 
             background: url(src/bg.png) no-repeat center center fixed; 
@@ -35,7 +36,7 @@
     <nav id="nav" class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a id="logo" class="navbar-item" href="src/logo.png">
-          <img src="src/logo.png" width="164" height="28">
+          <img src="src/logo.png" width="200" height="28">
         </a>
       </div>
       <div id="navbarBasicExample" class="navbar-menu">
