--- a/frontend/index.html
+++ b/frontend/index.html
@@ -75,6 +75,23 @@
     </div>
   </section>
 
+  <section class="section is-medium has-background-light">
+    <div class="columns">
+      <div class="column is-three-fifths is-offset-one-fifth">
+        <div class="columns">
+          <div class="column is-three-fifths">
+            <iframe src="http://m25.joinserver.ru:25904/?worldname=world&mapname=surface&zoom=4&x=360&y=64&z=-261" width="100%" height="480">
+              <p>Ваш браузер не поддерживает iframe.</p>
+            </iframe>
+          </div>
+          <div class="column has-text-centered">
+            <h1 class="title">Взгляните на карту!</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="info" class="section is-medium has-background-white">
     <!-- <div class="columns">
       <div class="column is-one-third">
